Begin Game Logic
Start on gameplay

--- a/index.html
+++ b/index.html
@@ -17,35 +17,12 @@
       </div>
 
       <div class="items-container">
-		<div class="item at-t-1 red">
-			<div class="item-in">
-			
-			</div>
-		</div>
-		<div class="item at-t-2 blue">
-			<div class="item-in">
-			
-			</div>
-		</div>
-		<div class="item at-t-3 yellow">
-			<div class="item-in">
-			
-			</div>
-		</div>
-		<div class="item at-t-4 green">
-			<div class="item-in">
-			
-			</div>
-		</div>
-		<div class="item-made wait at-b-2 red">
-			<div class="item-in">
-			
-			</div>
-		</div>
+
       </div>
     </div>
   </div>
 
+  <script src="js/html_morpher.js"></script>
   <script src="js/game_data.js"></script>
   <script src="js/game.js"></script>
   <script src="js/application.js"></script>
