--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
   <div class="container">
     <div class="game-container">
+	  <div class="score">
+	  
+	  </div>
+	  
       <div class="game-field-container">
 	  
       </div>
