--- a/index.html
+++ b/index.html
@@ -12,18 +12,30 @@
 <body>
   <div class="container">
     <div class="game-container">
-	  <div class="score">
+      <div class="score">
 	  
 	  </div>
+	  <div class="level-num">
 	  
-      <div class="game-field-container">
+	  </div>
+	  <div class="play-container">
+        <div class="game-field-container">
 	  
-      </div>
+        </div>
 
-      <div class="items-container">
+        <div class="items-container">
 
-      </div>
+        </div>
+	  </div>
     </div>
+  </div>
+  <div class="information">
+  <p>To start place your mouse in the gray box.</p>
+  <p>When you move your mouse off of the gray box, it will change color. Move to the opposite box of the same color and repeat.</p>
+  <p>Hitting the correct color will give 200 points, but the wrong color will take away 100.</p>
+  <p>You will loose points over time, and the higher level you are the faster you loose points.</p>
+  <p>You will stop loosing points when your mouse is in a grey box.</p>
+  <p>See how long you can keep your points in the positive.</p>
   </div>
 
   <script src="js/html_morpher.js"></script>
