--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
 	<div class="container">
 		<div class="game-container">
 			<div class="items-container">
-
+			
 			</div>
 		</div>
 		<div class="side-container">
 			<div class="score-container">
-
+				<div class="stat" id="score"></div>
+				<div class="stat" id="level"></div>
 			</div>
 			<div class="best-score-container">
-
+				<div class="stat" id="best-score"></div>
+				<div class="stat" id="best-level"></div>
 			</div>
 		</div>
 		<div class="game-message">
@@ -46,8 +48,8 @@
 	<p>See how long you can keep your points in the positive.</p>
 	</div>
 
-	<script src="js/html_morpher.js"></script>
-	<script src="js/game_data.js"></script>
+	<script src="js/html_manipulator.js"></script>
+	<script src="js/game_stats.js"></script>
 	<script src="js/game.js"></script>
 	<script src="js/application.js"></script>
 </body>
