Level Number Separated
Store room and level stats separately
Fix message display

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 
 	<link href="style/main.css" rel="stylesheet" type="text/css">
 	<link rel="shortcut icon" href="favicon.ico">
-	
-	<meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 <body>
 	<div class="container">
@@ -19,7 +17,11 @@
 		<div class="side-container">
 			<div class="score-container">
 				<div class="stat" id="score"></div>
-				<div class="stat" id="level"></div>
+				<div class="level-stats">
+					<div class="stat level-stat" id="level-level"></div>
+					-
+					<div class="stat level-stat" id="level-room"></div>
+				</div>
 			</div>
 			<div class="best-score-container">
 				<div class="stat" id="best-score"></div>
@@ -27,7 +29,7 @@
 			</div>
 		</div>
 		<div class="game-message">
-			<div class="game-over show">
+			<div class="game-over">
 				<div class="lower">
 					<a class="retry-button">Try Again</a>
 				</div>
