Sidebar Game Over
Add scores to sidebar
Add game over message

--- a/index.html
+++ b/index.html
@@ -25,18 +25,25 @@
 			</div>
 			<div class="best-score-container">
 				<div class="stat" id="best-score"></div>
-				<div class="stat" id="best-level"></div>
+				<div class="level-stats">
+					<div class="stat level-stat" id="best-level-level"></div>
+					-
+					<div class="stat level-stat" id="best-level-room"></div>
+				</div>
 			</div>
 		</div>
 		<div class="game-message">
-			<div class="game-over">
-				<div class="lower">
-					<a class="retry-button">Try Again</a>
+			<div class="message-container">
+				<div class="game-over">
+					Game Over!
+					<div class="lower">
+						<a class="retry-button">Try Again</a>
+					</div>
 				</div>
-			</div>
-			<div class="game-stats">
-				<div class="lower">
-					<a class="back-button">Back</a>
+				<div class="game-stats">
+					<div class="lower">
+						<a class="back-button">Back</a>
+					</div>
 				</div>
 			</div>
 		</div>
