--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<br>
 				Round <div class="stat" id="best-level-level"></div>-<div class="stat" id="best-level-room"></div>
 				<br>
-				<div class="stat" id="best-streak">0</div> Round Streak
+				<div class="stat" id="best-streak"></div> Round Streak
 			</div>
 		</div>
 		<div class="game-message">
